--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <header></header>
         <main>
-            <div class="mainscreen">
+            <section class="mainscreen">
                 <div class="mainscreen-bg">
                     <img src="./src/mainscreen-bg.jpg" alt="/">
                 </div>
@@ -24,7 +24,23 @@
                         Нажми на квадрат
                     </div>
                 </div>
-            </div>
+            </section>
+            <section class="about">
+                <div class="about-wrapper container">
+                    <div class="about-photo">
+                        <img src="./src/about/best-teacher.jpg" alt="pretty face">
+                    </div>
+                    <div class="about-info">
+                        <div class="about-title">
+                            <h1 class="change-text chinese">你好，我叫瓦里亚</h1>
+                            <span class="new-text">Привет, меня зовут Варвара</span>
+                        </div>
+                        <div class="about-text">
+                            Я преподаватель китайского языка с большим стажем и опытом.
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer></footer>
     </div>
