--- a/index.html
+++ b/index.html
@@ -26,17 +26,23 @@
                 </div>
             </section>
             <section class="about">
+                <div class="about-title">
+                    <h2 class="change-text chinese">你好，我叫瓦里亚</h2>
+                    <span class="new-text">Привет, меня зовут Варвара</span>
+                </div>
                 <div class="about-wrapper container">
                     <div class="about-photo">
                         <img src="./src/about/best-teacher.jpg" alt="pretty face">
                     </div>
                     <div class="about-info">
-                        <div class="about-title">
-                            <h1 class="change-text chinese">你好，我叫瓦里亚</h1>
-                            <span class="new-text">Привет, меня зовут Варвара</span>
-                        </div>
                         <div class="about-text">
                             Я преподаватель китайского языка с большим стажем и опытом.
+                        </div>
+                        <div class="about-text">
+                            Длительное время я жила в Китае, в окружении носителей одного из самых мелодичных и древних языков мира.
+                        </div>
+                        <div class="about-text">
+                            Сейчас я передаю эти знания всем желающим прикоснуться к культуре людей, проложивших шелковый путь и построивших одно из семи чудес
                         </div>
                     </div>
                 </div>
