forEach now works

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <img src="./src/mainscreen-bg.jpg" alt="/">
                 </div>
                 <div class="mainscreen-wrapper container">
-                    <div class="mainscreen-title">
+                    <div class="mainscreen-title change-box">
                         <h1 class="change-text chinese">千里之行,始于足下</h1>
                         <span class="new-text">путь в тысячу ли начинается с первого шага</span>
                     </div>
@@ -26,7 +26,7 @@
                 </div>
             </section>
             <section class="about">
-                <div class="about-title">
+                <div class="about-title change-box">
                     <h2 class="change-text chinese">你好，我叫瓦里亚</h2>
                     <span class="new-text">Привет, меня зовут Варвара</span>
                 </div>
