--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="mainscreen-wrapper container">
                     <div class="mainscreen-title change-box">
-                        <h1 class="change-text chinese">千里之行,始于足下</h1>
+                        <h1 class="change-text chinese">千<br>里<br>之<br>行,<br>始<br>于<br>足<br>下</h1>
                         <span class="new-text">путь в тысячу ли начинается с первого шага</span>
                     </div>
                     <div class="mainscreen-subtitle">
@@ -26,9 +26,9 @@
                 </div>
             </section>
             <section class="about">
-                <div class="about-title change-box">
-                    <h2 class="change-text chinese">你好，我叫瓦里亚</h2>
-                    <span class="new-text">Привет, меня зовут Варвара</span>
+                <div class="section-title change-box">
+                    <h2 class="change-text chinese">关于我的一点</h2>
+                    <span class="new-text">Немного обо мне</span>
                 </div>
                 <div class="about-wrapper container">
                     <div class="about-photo">
@@ -42,7 +42,55 @@
                             Длительное время я жила в Китае, в окружении носителей одного из самых мелодичных и древних языков мира.
                         </div>
                         <div class="about-text">
-                            Сейчас я передаю эти знания всем желающим прикоснуться к культуре людей, проложивших шелковый путь и построивших одно из семи чудес
+                            Сейчас я передаю эти знания всем желающим прикоснуться к культуре людей, проложивших шелковый путь и построивших одно из семи чудес света.
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="achievements">
+                <div class="section-title change-box">
+                    <h2 class="change-text chinese">关于我的一点</h2>
+                    <span class="new-text">Немного обо мне</span>
+                </div>
+                <div class="achievements-wrapper container">
+                    <div class="achievements-item">
+                        <div class="achievements-item--img">
+                            <img src="./src/achievements/1.jpg" alt="图片">
+                        </div>
+                        <div class="achievements-item--info">
+
+                            <div class="achievements-item--title">
+                                Подача
+                            </div>
+                            <div class="achievements-item--text">
+                                Материал к каждому уроку готовится заранее. Помимо лекций, к каждому уроку я готовлю упражнения и презентации.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="achievements-item">
+                        <div class="achievements-item--img">
+                            <img src="./src/achievements/2.jpg" alt="图片">
+                        </div>
+                        <div class="achievements-item--info">
+                            <div class="achievements-item--title">
+                                Материал
+                            </div>
+                            <div class="achievements-item--text">
+                                Я преподаю по современным учебникам, которые входят в студенческую программу КРУТЫХ китайских вузов.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="achievements-item">
+                        <div class="achievements-item--img">
+                            <img src="./src/achievements/3.jpg" alt="图片">
+                        </div>
+                        <div class="achievements-item--info">
+                            <div class="achievements-item--title">
+                                Методики
+                            </div>
+                            <div class="achievements-item--text">
+                                Помимо лекций, вы так же получите небольшое домашнее задание это позволит не забыть материал урока и проверить собственные силы.
+                            </div>
                         </div>
                     </div>
                 </div>
