--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             </section>
-            <section class="about">
+            <section class="section about">
                 <div class="section-title change-box">
                     <h2 class="change-text chinese">关于我的一点</h2>
                     <span class="new-text">Немного обо мне</span>
@@ -46,11 +46,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="section-count">
+                    第一个
+                </div>
             </section>
-            <section class="achievements">
-                <div class="section-title change-box">
-                    <h2 class="change-text chinese">关于我的一点</h2>
-                    <span class="new-text">Немного обо мне</span>
+            <section class="section achievements">
+                <div class="section-title section-title--black change-box">
+                    <h2 class="change-text change-text--black chinese">我的程序</h2>
+                    <span class="new-text">моя программа</span>
                 </div>
                 <div class="achievements-wrapper container">
                     <div class="achievements-item">
@@ -58,7 +61,6 @@
                             <img src="./src/achievements/1.jpg" alt="图片">
                         </div>
                         <div class="achievements-item--info">
-
                             <div class="achievements-item--title">
                                 Подача
                             </div>
@@ -94,6 +96,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="section-count">
+                    第二
+                </div>
+            </section>
+            <section class="section contact">
+
             </section>
         </main>
         <footer></footer>
