--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                         </div>
                         <div class="achievements-item--info">
                             <div class="achievements-item--title">
-                                Подача
+                                Формат
                             </div>
                             <div class="achievements-item--text">
-                                Материал к каждому уроку готовится заранее. Помимо лекций, к каждому уроку я готовлю упражнения и презентации.
+                                Занятия проходят онлайн с помощью Zoom. И даже если вы вынуждены пропустить занятие, у вас будет доступ к записи!    
                             </div>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                                 Материал
                             </div>
                             <div class="achievements-item--text">
-                                Я преподаю по современным учебникам, которые входят в студенческую программу КРУТЫХ китайских вузов.
+                                Помимо лекций и записей, вы так же получите небольшое домашнее задание, для лучшего усвоения материала и самостоятельного развития. 
                             </div>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                                 Методики
                             </div>
                             <div class="achievements-item--text">
-                                Помимо лекций, вы так же получите небольшое домашнее задание это позволит не забыть материал урока и проверить собственные силы.
+                                Материалы лекции я готовлю самостоятельно и подгоняю индивидуально под каждого. 
                             </div>
                         </div>
                     </div>
@@ -101,7 +101,27 @@
                 </div>
             </section>
             <section class="section contact">
-
+                <div class="section-title change-box">
+                    <h2 class="change-text chinese">联系方式</h2>
+                    <span class="new-text">Контакты</span>
+                </div>
+                <div class="contact-bg">
+                    <img src="./src/contact/bg.jpg" alt="图片">
+                </div>
+                <div class="contact-wrapper container">
+                    <div class="contact-table">
+                        <img src="./src/contact/1.jpg" alt="">
+                        <div class="contact-piece">
+                            <img src="" alt="">
+                        </div>
+                        <div class="contact-piece">
+                            <img src="" alt="">
+                        </div>
+                        <div class="contact-piece">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
         <footer></footer>
