--- a/index.html
+++ b/index.html
@@ -109,18 +109,30 @@
                     <img src="./src/contact/bg.jpg" alt="图片">
                 </div>
                 <div class="contact-wrapper container">
+                    <div class="contact-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur cumque quos eveniet quae quas atque sapiente molestias fugit, illo assumenda ratione! Maiores beatae quam quisquam, voluptas dolore blanditiis ea quae.
+                    </div>
                     <div class="contact-table">
-                        <img src="./src/contact/1.jpg" alt="">
+                        <img src="./src/contact/1.jpg" alt="图片">
                         <div class="contact-piece">
-                            <img src="" alt="">
+                            <img src="./src/contact/icons/phone.svg" alt="图片">
                         </div>
                         <div class="contact-piece">
-                            <img src="" alt="">
+                            <img src="./src/contact/icons/whatsapp.svg" alt="图片">
                         </div>
                         <div class="contact-piece">
-                            <img src="" alt="">
+                            <img src="./src/contact/icons/viber.svg" alt="图片">
+                        </div>
+                        <div class="contact-piece">
+                            <img src="./src/contact/icons/telegram.svg" alt="图片">
                         </div>
                     </div>
+                    <div class="contact-tel">
+                        <a href="">79999999999</a>
+                    </div>
+                </div>
+                <div class="section-count">
+                    最后
                 </div>
             </section>
         </main>
