--- a/index.html
+++ b/index.html
@@ -110,25 +110,24 @@
                 </div>
                 <div class="contact-wrapper container">
                     <div class="contact-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur cumque quos eveniet quae quas atque sapiente molestias fugit, illo assumenda ratione! Maiores beatae quam quisquam, voluptas dolore blanditiis ea quae.
-                    </div>
-                    <div class="contact-table">
-                        <img src="./src/contact/1.jpg" alt="图片">
-                        <div class="contact-piece">
-                            <img src="./src/contact/icons/phone.svg" alt="图片">
-                        </div>
-                        <div class="contact-piece">
-                            <img src="./src/contact/icons/whatsapp.svg" alt="图片">
-                        </div>
-                        <div class="contact-piece">
-                            <img src="./src/contact/icons/viber.svg" alt="图片">
-                        </div>
-                        <div class="contact-piece">
-                            <img src="./src/contact/icons/telegram.svg" alt="图片">
-                        </div>
+                            Если ты давно хотел изучить китайский язык, позвони или напиши в один из мессенджеров и сделай первый шаг к <span class="chinese">奇妙的知识</span>!
                     </div>
                     <div class="contact-tel">
-                        <a href="">79999999999</a>
+                        <a href="tel:+79276989253">+7(927) 698-92-53</a>
+                    </div>
+                    <div class="contact-messengers">
+                        <div class="contact-icon">
+                            <img src="./src/contact/icons/phone.svg" alt="图片">
+                        </div>
+                        <div class="contact-icon">
+                            <img src="./src/contact/icons/whatsapp.svg" alt="图片">
+                        </div>
+                        <div class="contact-icon">
+                            <img src="./src/contact/icons/viber.svg" alt="图片">
+                        </div>
+                        <div class="contact-icon">
+                            <img src="./src/contact/icons/telegram.svg" alt="图片">
+                        </div>
                     </div>
                 </div>
                 <div class="section-count">
