--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <span class="new-text">путь в тысячу ли начинается с первого шага</span>
                     </div>
                     <div class="mainscreen-subtitle">
-                        Нажми на квадрат
+                        Нажми чтобы сделать первый шаг!
                     </div>
                 </div>
             </section>
@@ -117,16 +117,16 @@
                     </div>
                     <div class="contact-messengers">
                         <div class="contact-icon">
-                            <img src="./src/contact/icons/phone.svg" alt="图片">
+                            <a href="#"><img src="./src/contact/icons/phone.svg" alt="图片"></a>
                         </div>
                         <div class="contact-icon">
-                            <img src="./src/contact/icons/whatsapp.svg" alt="图片">
+                            <a href="#"><img src="./src/contact/icons/whatsapp.svg" alt="图片"></a>
                         </div>
                         <div class="contact-icon">
-                            <img src="./src/contact/icons/viber.svg" alt="图片">
+                            <a href="#"><img src="./src/contact/icons/viber.svg" alt="图片"></a>
                         </div>
                         <div class="contact-icon">
-                            <img src="./src/contact/icons/telegram.svg" alt="图片">
+                            <a href="#"><img src="./src/contact/icons/telegram.svg" alt="图片"></a>
                         </div>
                     </div>
                 </div>
