--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
                     </div>
                     <div class="contact-messengers">
                         <div class="contact-icon">
-                            <a href="#"><img src="./src/contact/icons/phone.svg" alt="图片"></a>
+                            <a href="tel:+79276989253"><img src="./src/contact/icons/phone.svg" alt="图片"></a>
                         </div>
                         <div class="contact-icon">
-                            <a href="#"><img src="./src/contact/icons/whatsapp.svg" alt="图片"></a>
+                            <a href="https://skobelkin.ru/whatsapp/79276989253?text=Привет,+я+хочу+учить+китайский?+:)"><img src="./src/contact/icons/whatsapp.svg" alt="图片"></a>
                         </div>
                         <div class="contact-icon">
-                            <a href="#"><img src="./src/contact/icons/viber.svg" alt="图片"></a>
+                            <a href="https://msng.link/o/?79276989253=vi"><img src="./src/contact/icons/viber.svg" alt="图片"></a>
                         </div>
                         <div class="contact-icon">
-                            <a href="#"><img src="./src/contact/icons/telegram.svg" alt="图片"></a>
+                            <a href="https://t.me/epiphanynear"><img src="./src/contact/icons/telegram.svg" alt="图片"></a>
                         </div>
                     </div>
                 </div>
