--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="section-count">
+                <div class="section-count chinese">
                     第一个
                 </div>
             </section>
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="section-count">
+                <div class="section-count chinese">
                     第二
                 </div>
             </section>
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="section-count">
+                <div class="section-count chinese">
                     最后
                 </div>
             </section>
