--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 <body>
     <div class="wrapper">
-        <header></header>
+        <header class="header header-hide">
+            <div class="header-wrapper container">
+                <ul class="header-menu">
+                    <li class="header-menu--li active">
+                        <a href="#main">Главная</a>
+                    </li>
+                    <li class="header-menu--li">
+                        <a href="#about">Обо мне</a>
+                    </li>
+                    <li id="skills" class="header-menu--li">
+                        <a href="#skills">Программа</a>
+                    </li>
+                    <li id="footer" class="header-menu--li">
+                        <a href="#footer">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+        </header>
         <main>
             <section class="mainscreen">
                 <div class="mainscreen-bg">
@@ -17,7 +34,7 @@
                 </div>
                 <div class="mainscreen-wrapper container">
                     <div class="mainscreen-title change-box">
-                        <h1 class="change-text chinese">千<br>里<br>之<br>行,<br>始<br>于<br>足<br>下</h1>
+                        <h1 class="change-text">千<br>里<br>之<br>行,<br>始<br>于<br>足<br>下</h1>
                         <span class="new-text">путь в тысячу ли начинается с первого шага</span>
                     </div>
                     <div class="mainscreen-subtitle">
@@ -27,7 +44,7 @@
             </section>
             <section class="section about">
                 <div class="section-title change-box">
-                    <h2 class="change-text chinese">关于我的一点</h2>
+                    <h2 class="change-text">关于我的一点</h2>
                     <span class="new-text">Немного обо мне</span>
                 </div>
                 <div class="about-wrapper container">
@@ -46,13 +63,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="section-count chinese">
+                <div class="section-count">
                     第一个
                 </div>
             </section>
             <section class="section achievements">
                 <div class="section-title section-title--black change-box">
-                    <h2 class="change-text change-text--black chinese">我的程序</h2>
+                    <h2 class="change-text change-text--black">我的程序</h2>
                     <span class="new-text">моя программа</span>
                 </div>
                 <div class="achievements-wrapper container">
@@ -96,21 +113,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="section-count chinese">
+                <div class="section-count">
                     第二
                 </div>
             </section>
             <section class="section contact">
                 <div class="section-title change-box">
-                    <h2 class="change-text chinese">联系方式</h2>
+                    <h2 class="change-text">联系方式</h2>
                     <span class="new-text">Контакты</span>
                 </div>
                 <div class="contact-bg">
-                    <img src="./src/contact/bg.jpg" alt="图片">
+                    <img src="./src/mainscreen-bg.jpg" alt="图片">
                 </div>
                 <div class="contact-wrapper container">
                     <div class="contact-text">
-                            Если ты давно хотел изучить китайский язык, позвони или напиши в один из мессенджеров и сделай первый шаг к <span class="chinese">奇妙的知识</span>!
+                            Если ты давно мечтал изучить китайский язык, позвони или напиши в один из мессенджеров и сделай первый шаг к <span>梦想</span>!
                     </div>
                     <div class="contact-tel">
                         <a href="tel:+79276989253">+7(927) 698-92-53</a>
@@ -130,12 +147,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="section-count chinese">
+                <div class="section-count">
                     最后
                 </div>
             </section>
         </main>
-        <footer></footer>
     </div>
     <script src="./js/script.js"></script>
 </body>
